force-app/main/default/objects/Expenditure_Category__c/Expenditure_Category__c.object-meta.xml
<CustomObject>
    <label>Expenditure/Eligible Category</label>
    <nameField>
        <displayFormat>EC-{0}</displayFormat>
        <label>Expenditure/Eligibility</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditure/Eligible Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>