force-app/main/default/objects/Expenditure_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Reference_Category__c</referenceTo>
    <relationshipLabel>Expenditure/Eligible Categories</relationshipLabel>
    <relationshipName>Expenditure_Eligible_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>