force-app/main/default/objects/Expenditure_Category__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Opportunity</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Expenditure/Eligible Categories</relationshipLabel>
    <relationshipName>Expenditure_Eligible_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>